--- a/infra/docker-compose.yml
+++ b/infra/docker-compose.yml
@@ -16,6 +16,18 @@ services:
     ports:
       - 3000:3000
 
+  prod:
+    stdin_open: true
+    environment:
+      - CHOKIDAR_USEPOLLING=true
+    build:
+      context: ../
+      dockerfile: infra/Dockerfile.prod
+    expose:
+      - 3000
+    ports:
+      - 3000:3000
+
   wiremock:
     image: rodolpheche/wiremock
     container_name: wiremock
