--- a/package.json
+++ b/package.json
@@ -49,5 +49,6 @@
     "eslint-plugin-n": "^15.2.4",
     "eslint-plugin-promise": "^6.0.0",
     "eslint-plugin-react": "^7.30.1"
-  }
+  },
+  "proxy": "http://api:3000" 
 }
