--- a/.env.production
+++ b/.env.production
@@ -1,1 +1,1 @@
-REACT_APP_BACKEND_API=http://database-bootcampae.cdvn7jbs4g6l.us-east-1.rds.amazonaws.com
+REACT_APP_BACKEND_API=http://localhost:8080
